--- a/MovieSiteApi/Pages/Home.razor
+++ b/MovieSiteApi/Pages/Home.razor
@@ -2,6 +2,10 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<div class="h-100 d-flex flex-column justify-content-center align-items-center">
 
-Welcome to your new app.
+    <h1>Hello, world!</h1>
+    Welcome to your new app.
+    
+    <button class="btn btn-primary mt-3">Primary button test</button>
+</div>
